# ohtu

./: PULL.md  README.md
viikko1/nhl-statistics-1/: pyproject.toml
viikko1/nhl-statistics-1/src/: index.py  player_reader.py  statistics_service.py
viikko1/nhl-statistics-1/src/tests/: statistics_service_test.py
viikko1/riippuvuuksien-injektointi-1/: pyproject.toml
viikko2/git-branch-harjoitus/: LICENSE  README.md  flake.nix  index.py  logger.py  summa.py  tulo.py
viikko2/nhl-reader/: flake.nix  pyproject.toml
viikko2/nhl-reader/src/: index.py  player.py
viikko2/poetry-web/: flake.nix  pyproject.toml
viikko2/project-reader/: flake.nix  pyproject.toml
viikko2/project-reader/src/: project.py  project_reader.py
viikko3/web-login/: flake.nix  pyproject.toml
viikko3/web-login/src/services/: user_service.py
viikko3/web-login/src/tests/: home.robot  login.robot  register.robot  resource.robot
viikko4/maksukortti-mock/: flake.nix
viikko4/maksukortti-mock/src/: kassapaate.py
viikko4/verkkokauppa/: flake.nix  pyproject.toml  retro.md
viikko5/: important.txt
viikko5/int-joukko/: flake.nix
viikko5/int-joukko/src/: int_joukko.py
viikko5/laskin/: flake.nix
viikko5/laskin/src/: kayttoliittyma.py
viikko5/tennis/src/: lib.rs  tennis.rs
viikko5/tennis/tests/: unit.rs
viikko6/query-language/: flake.nix
viikko6/query-language/src/: index.py  matchers.py  player.py  player_reader.py  statistics.py
viikko7/kivi-paperi-sakset/: flake.nix
viikko7/kivi-paperi-sakset/src/: index.py  kps.py  kps_variantit.py
(+2 files in other folders)
