[tool.poetry]
name = "poetry-web"
version = "0.1.0"
description = ""
authors = ["Elias Eskelinen <git@eliaseskelinen.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
